--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    apply plugin: "androidx.navigation.safeargs.kotlin"
 }
 
 dependencies {
