--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+
 
 }
