--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 buildscript {
     ext.nav_version = "2.5.3"
+    ext.hilt_version = "2.38.1"
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
